# rshotkey

./: '  Cargo.toml  README.md  cspell.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark.yml  build.yml  cspell.yml  test.yml
benches/: history.rs
crates/rshotkey/: Cargo.toml
crates/rshotkey-mouse/: Cargo.toml
crates/rshotkey-mouse/src/: lib.rs  utils.rs
crates/rshotkey/src/: exception.rs  history.rs  main.rs
src/: event.rs  history.rs  hooks.rs  key.rs  lib.rs  listener.rs  main.rs
