[package]
name = "rshotkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
rdev = "0.5.3"
tokio = { version = "1.37.0", features = ["full"] }
