[package]
name = "rshotkey"
version = "0.1.1"
authors = ["苏向夜 <fu050409@163.com>"]
description = "A Hotkey tracker and handler"
repository = "https://github.com/fu050409/rshotkey"
readme = "README.md"
license = "AGPL-3.0"
keywords = ["hotkey"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
rayon = "1.10.0"
rdev = "0.5.3"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }

[lib]
name = "rshotkey"

[[bin]]
name = "main"
